--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ left: 0px;
    background-color: var(--eventflow-base);
 }
 
-.main-slider .swiper-slide {
+.main-slider .main_swiper {
     background-image: url('../../assets/images/backgrounds/banner-one-bg.jpg');
 }
 
@@ -120,4 +120,13 @@ left: 0px;
 
 .services-one .section-title__title{
     line-height: 35px;
+}
+
+.main-slider__img{
+    width: 650px;
+    top:-60px
+}
+
+.main-slider__content img {
+    margin-right: 15px;
 }
