--- a/assets/css/eventflow.css
+++ b/assets/css/eventflow.css
@@ -24,8 +24,8 @@
   --eventflow-gray-rgb: 124, 123, 123;
   --eventflow-white: #ffffff;
   --eventflow-white-rgb: 255, 255, 255;
-  --eventflow-base: #B20D5D;
-  --eventflow-base-rgb: 178, 13, 93;
+  --eventflow-base: #F12323;
+  --eventflow-base-rgb: 241, 35, 93;
   --eventflow-black: #04000A;
   --eventflow-black-rgb: 4, 0, 10;
   --eventflow-primary: #4A0AB4;
@@ -34,6 +34,63 @@
   --eventflow-extra-rgb: 248, 248, 248;
   --eventflow-bdr-color: #CCCCCC;
   --eventflow-bdr-color-rgb: 204, 204, 204;
+  --e-global-color-primary: #F12323;
+  --e-global-color-secondary: #FFFFFF;
+  --e-global-color-text: #B0B0B0;
+  --e-global-color-accent: #030303;
+  --e-global-color-a2c694a: #00000000;
+  --e-global-color-89fdff7: #0D0D0D;
+  --e-global-color-e42c7c0: #AFAFAF;
+  --e-global-color-3fc2a69: #3B3B3B;
+  --e-global-typography-primary-font-family: "Poppins";
+  --e-global-typography-secondary-font-family: "Red Hat Display";
+  --e-global-typography-secondary-font-weight: 400;
+  --e-global-typography-text-font-family: "Red Hat Display";
+  --e-global-typography-text-font-size: 16px;
+  --e-global-typography-text-line-height: 1.2em;
+  --e-global-typography-accent-font-family: "Red Hat Display";
+  --e-global-typography-accent-font-size: 17px;
+  --e-global-typography-accent-font-weight: 700;
+  --e-global-typography-accent-line-height: 1em;
+  --e-global-typography-6db8522-font-family: "Poppins";
+  --e-global-typography-6db8522-font-size: 110px;
+  --e-global-typography-6db8522-font-weight: 700;
+  --e-global-typography-6db8522-line-height: 1em;
+  --e-global-typography-6db8522-letter-spacing: -4px;
+  --e-global-typography-1089309-font-family: "Poppins";
+  --e-global-typography-1089309-font-size: 60px;
+  --e-global-typography-1089309-font-weight: 700;
+  --e-global-typography-1089309-line-height: 1em;
+  --e-global-typography-4451d17-font-family: "Poppins";
+  --e-global-typography-4451d17-font-size: 30px;
+  --e-global-typography-4451d17-font-weight: 700;
+  --e-global-typography-4451d17-line-height: 1.1em;
+  --e-global-typography-15affb9-font-family: "Poppins";
+  --e-global-typography-15affb9-font-size: 22px;
+  --e-global-typography-15affb9-font-weight: 600;
+  --e-global-typography-15affb9-line-height: 1em;
+  --e-global-typography-af1cddd-font-family: "Poppins";
+  --e-global-typography-af1cddd-font-size: 19px;
+  --e-global-typography-af1cddd-font-weight: 600;
+  --e-global-typography-af1cddd-line-height: 1em;
+  --e-global-typography-5bae448-font-family: "Red Hat Display";
+  --e-global-typography-5bae448-font-size: 14px;
+  --e-global-typography-5bae448-line-height: 1em;
+  --e-global-typography-d0ffc4e-font-family: "Poppins";
+  --e-global-typography-d0ffc4e-font-size: 85px;
+  --e-global-typography-d0ffc4e-font-weight: 700;
+  --e-global-typography-d0ffc4e-line-height: 1em;
+  --e-global-typography-d0ffc4e-letter-spacing: -4px;
+  --e-global-typography-4dbcdd4-font-family: "Poppins";
+  --e-global-typography-4dbcdd4-font-size: 23px;
+  --e-global-typography-4dbcdd4-font-weight: 600;
+  --e-global-typography-4dbcdd4-font-style: italic;
+  --e-global-typography-4dbcdd4-line-height: 1.2em;
+  background-color: var( --e-global-color-accent );
+  color: var( --e-global-color-text );
+  font-family: var( --e-global-typography-text-font-family ), Sans-serif;
+  font-size: var( --e-global-typography-text-font-size );
+  line-height: var( --e-global-typography-text-line-height );
 
 }
 
