--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,13 +72,13 @@
 }
 canvas{display:block}
 
-.main-slider .swiper-slide::after{
+.main-slider .main_swiper::after{
     content: '';
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.486);
+    background: rgba(20, 20, 20, 0.664);
     position: absolute;
 }
 
@@ -228,3 +228,90 @@ canvas{display:block}
     transform: translate(0px 15px);
     position: relative;
 }
+
+canvas {
+    left: -435px;
+    top:50px;
+    position: relative;
+}
+
+
+.buy-ticket__img img{
+    border: none;
+}
+
+.testimonial-one__client-img img{
+    height: 62px;
+    width: 62px;
+}
+
+.count-down {
+    width: 550px;
+    height: 378px;
+    margin: auto;
+    padding: 20px;
+}
+.count-down .flipdown {
+    margin: auto;
+    width: 600px;
+    margin-top: 30px;
+}
+.count-down h1 {
+    text-align: center;
+    font-weight: 400;
+    font-size: 3em;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+@media (max-width: 550px) {
+    .count-down {
+        width: 100%;
+        height: 362px;
+    }
+    .count-down h1 {
+        font-size: 2.5em;
+    }
+}
+
+
+.flipdown .rotor-group:nth-child(n+2):nth-child(-n+3):before {
+    content: '';
+    position: absolute;
+    bottom: 20px;
+    left: 115px;
+    width: 10px;
+    height: 10px;
+    background-color: #fff !important;
+    border-radius: 14%;
+  }
+  
+  .flipdown .rotor-group:nth-child(n+2):nth-child(-n+3):after {
+    content: '';
+    position: absolute;
+    bottom: 50px;
+    left: 115px;
+    width: 10px;
+    height: 10px;
+    background-color: #fff !important;
+    border-radius: 14%;
+  }
+  
+  .flipdown.flipdown__theme-dark .rotor-group-heading:before{
+    color:#fff;
+  }
+
+  .main-slider__content{
+    top: -31px;
+  }
+
+  .count-down .flipdown{
+    margin-top: 46px;
+  }
+
+  .brand_sponsor .brand-one{
+    background-color: #9c9292;
+  }
+
+  .brand-one .swiper-slide__img{
+    opacity: 1;
+  }
