--- a/assets/css/eventflow.css
+++ b/assets/css/eventflow.css
@@ -406,7 +406,7 @@ ul {
 
 .preloader {
   position: fixed;
-  background-color: #fff;
+  background-color: #000000;
   background-position: center center;
   background-repeat: no-repeat;
   top: 0;
@@ -435,10 +435,10 @@ ul {
   animation-duration: 2s;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  background-image: url(../images/loader.png);
+  background-image: url('https://hellosuperstars.com/static/media/HelloSuperStarLogo.b2954c0f9e2cfe31a215.png');
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 60px auto;
+  background-size: 150px auto;
   width: 100%;
   height: 100%;
 }
