--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ canvas{display:block}
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(20, 20, 20, 0.664);
+    background: rgba(20, 20, 20, 0.774);
     position: absolute;
 }
 
@@ -96,7 +96,7 @@ canvas{display:block}
 
 .services-one__single{
     position: relative;
-    min-height: 582px;
+    min-height: 482px;
     display: flex;
     flex-direction: column;
 }
@@ -109,8 +109,8 @@ canvas{display:block}
 }
 
 .services-one__read-more {
-    position: absolute;
-    bottom:40px;
+    /* position: absolute; */
+    /* bottom:40px; */
     
 }
 
@@ -124,6 +124,7 @@ canvas{display:block}
 }
 
 .patner_sponsor_text {
+    background-color: #141414;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -319,7 +320,73 @@ canvas {
   .brand_sponsor .brand-one{
     background-color: #9c9292;
   }
+  .brand_sponsor{
+    background-color: #141414;
+  }
 
   .brand-one .swiper-slide__img{
     opacity: 1;
   }
+
+ 
+  .team-one__content{
+    position: absolute;
+    bottom: 6px;
+    left: 30px;
+    right: 30px;
+    background-color: #0E0A17;
+    padding: 12px 12px 8px;
+    border-radius: 20px;
+    transform: translateY(0%);
+    transition: opacity 500ms ease, visibility 500ms ease, transform 500ms ease;
+    visibility: visible;
+    opacity: 1;
+    z-index: 2;
+  }
+
+  .team-one__content-hover{
+    bottom: 6px;
+    left: 30px;
+    right: 30px;
+    padding: 17px 14px 13px;
+  }
+
+  .team-one__name{
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 22px;
+    margin-bottom: 14px;
+  }
+
+  .team-one__name{
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 22px;
+    margin-bottom: 10px;
+  }
+
+.site-footer__social a:hover, .testimonial-one__quote span, .footer-widget__contact-list li .icon span, .section-title__tagline {
+    background: linear-gradient(90deg, #9e7070 0%, white 40%, var(--eventflow-base) 90%, #9e7070 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.gallery-one .section-title__tagline{
+    background: linear-gradient(90deg, #d6eb60 0%, white 60%, var(--eventflow-base) 90%, #645f17 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+
+}
+
+.count-down .flipdown{
+    transform: scale(.5);
+}
+
+.sliding-text-one{
+    padding:0;
+}
+
